--- a/web/src/components/contact/contact.css
+++ b/web/src/components/contact/contact.css
@@ -1,32 +1,28 @@
 .contact {
-    padding: 50px;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-bottom: 100px;
-    margin: 50px auto; /* Adjusted margin for laptops */
-    color: #000;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 150%;
+    width: 93%;
+    margin: 50px auto;
+  }
+
+  .contact p {
+    width: 50%;
+    color: #1a1a1a;
+    font-size: 1.1em;
   }
   
   .contactform {
-    border-radius: 15px;
-    background: #EBFAED;
-    padding: 50px;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 25px;
   }
   
   .contactform h2 {
     font-weight: 600;
-    /* font-size: 20px; Adjusted font size for laptops */
     width: 100%;
   }
   
   .namemessage,
   .biginput {
-    flex: 1 1 calc(50% - 20px); /* Adjusted flex calculation for laptops */
+    flex: 1 1 calc(50% - 20px);
     margin-right: 20px;
   }
   
@@ -36,18 +32,20 @@
     box-sizing: border-box;
     text-align: left;
     padding: 10px;
-    border: 1px solid #000;
     border-radius: 10px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  .contactform input::placeholder,
+  .contactform textarea::placeholder {
+  text-align: left;
   }
   
   .contactform input:not(.biginput input) {
     border-radius: 10px;
-    border: 1px solid #000;
     background: #FFF;
     padding: 10px;
     width: 100%;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    margin: 15px 0 10px 0; 
   }
   
   .formbuttons {
@@ -87,6 +85,11 @@
     cursor: pointer;
   }
   
+  @media (max-width: 860px) {
+    .contact p {
+      width: 100%;
+    }
+  }
   
   /* Media query for phone screens */
   @media screen and (max-width: 768px) {
