--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -263,15 +263,13 @@
 }
 
 .footer-terms {
-    margin: auto;
+    margin: 10px auto;
     padding: 0;
-
     width: 90%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
-    text-decoration-line: underline;
+    /* text-decoration-line: underline; */
     margin-top: 20px;
 }
 
