--- a/web/src/components/base/Login.css
+++ b/web/src/components/base/Login.css
@@ -7,28 +7,23 @@
     margin-top: 10px;
 }
 
+.loginLogo {
+    width: 15%;
+    margin-top: 25px;
+}
+
 .lbText {
     width: 20px;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
     color: white;
 }
 
 .loginButton {
     width: 100%;
-    padding: 8px 15px;
     background: #0D9813;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    border: 0;
+    /* border-radius: 15px; */
     color: white;
     font-size: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    
+    cursor: pointer; 
 }
 
 .registerButtonLogin {
@@ -53,7 +48,7 @@
     font-weight: 400;
     line-height: 54px;
     word-wrap: break-word;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 .loginContainer {
@@ -69,7 +64,7 @@
     width: 25%;
     margin-top: 20px;
     padding: 30px;
-    background: #EBFAED;
+    /* background: #EBFAED; */
     border-radius: 15px;
     margin-bottom: 50px;
     box-sizing: border-box;
