--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -3,9 +3,8 @@
 }
 
 .bar {
-  width: 65%;
-  margin: 20px auto 10px auto;
-  /* background: white; */
+  width: 100%;
+  margin: auto;
   box-shadow: 0 0 5px hsl(0 0% 78%);
   border-radius: 30px;
   display: flex;
@@ -156,7 +155,7 @@
 
 @media (max-width: 1000px) {
   .bar {
-    width: 85%;
+    width: 95%;
   }
 }
 
