--- a/web/src/components/listingdetails/listingdetails.css
+++ b/web/src/components/listingdetails/listingdetails.css
@@ -70,11 +70,13 @@
 }
 
 .listing-details-big-img img {
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    /* border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px; */
+    border-radius: 15px;
     width: 100%;
     height: 380px;
     max-height: 380px;
+    transition: transform 0.5s ease;
 }
 
 .listing-details-side-img {
@@ -104,32 +106,6 @@
     margin-top: 20px;
     display: flex; /* Use flexbox to create a row */
     align-items: center; /* Align items vertically */
-}
-
-.carousel-hidden {
-    display: none;
-}
-
-.carousel-visible {
-    display: block;
-}
-
-.carousel-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: rgba(255, 255, 255, 0.7);
-    padding: 10px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.carousel-button-left {
-    left: 0;
-}
-
-.carousel-button-right {
-    right: 0;
 }
 
 .price-per-night-text {
