--- a/web/src/components/listingdetails/listingdetails.css
+++ b/web/src/components/listingdetails/listingdetails.css
@@ -74,7 +74,7 @@
     border-bottom-left-radius: 15px; */
     border-radius: 15px;
     width: 100%;
-    height: 380px;
+    height: 100%;
     max-height: 380px;
     transition: transform 0.5s ease;
 }
