--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,6 +1,6 @@
 :root {
-  /*--colors-background-primary: #FFF;*/
-  /*--colors-font-secondary: #304050;*/
+    --primary-color: #0D9813;
+    --secondary-color: #003366;
 }
 
 /* Beginning of the accommodation styling */
