Minor changes for styling delete button

--- a/web/src/components/guestdashboard/guestdashboard.css
+++ b/web/src/components/guestdashboard/guestdashboard.css
@@ -105,6 +105,8 @@
     height: 40px;
     box-shadow: none;
     padding: 0;
+    border: none;
+    background-color: white;
 }
 
 .review-delete:hover {
