--- a/web/src/components/listingdetails/listingdetails.css
+++ b/web/src/components/listingdetails/listingdetails.css
@@ -8,7 +8,7 @@
 }
 
 .booking-details-section {
-    position: fixed;
+    /* position: fixed; */
     right: 15px;
 }
 
@@ -72,6 +72,8 @@
 .listing-details-big-img img {
     /* border-top-left-radius: 15px;
     border-bottom-left-radius: 15px; */
+    display: flex;
+    justify-content: center;
     border-radius: 15px;
     width: 100%;
     height: 100%;
