--- a/web/src/components/landingpage/Faq.css
+++ b/web/src/components/landingpage/Faq.css
@@ -11,7 +11,7 @@
 
 .faq-box {
   width: 50%;
-  border: 2px solid #003366;
+  border: 2px solid var(--primary-color);
   border-radius: 10px;
   margin: 10px 0;
   padding: 15px;
