--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -178,7 +178,42 @@
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Change to your preferred focus shadow */
 }
 
+.header {
+  font-size: 1.75em;
+}
 
+.accommodation-title {
+  font-size: 1.2em;
+  font-weight: bolder;
+}
+.accommodation-tab {
+  border-radius: 15px;
+  border: 1px solid gray;
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  margin: 10px;
+}
+.accommodation-left {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.accommodation-right {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.accommodation-tab:hover {
+  box-shadow: 4px 4px #003366;
+}
+.accommodation-img {
+  padding: 5px;
+  border-radius: 15px;
+  max-height: 15vh;
+  max-width: 25vw;
+}
 @media screen and (max-width: 830px) {
 
   .dashboard {
