--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -3,31 +3,20 @@
 }
 
 .bar {
-  width: 700px;
+  width: 100%;
   margin: auto;
   box-shadow: 0 0 5px hsl(0 0% 78%);
   border-radius: 30px;
   display: flex;
-  height: 55px;
+  height: 50px;
+  z-index: 999;
   font-size: 0.6rem;
-}
-.searchTitleAccommodation {
-  padding: 7px;
-}
-.searchTitleCenterAcco{
-  color: #0D9813;
-  font-size: 0.7rem;
-  font-family: 'Kanit', sans-serif;
-  font-weight: 700;
-  padding-top: 0%; 
-  margin-top: 0px; 
 }
 
 .bar .searchInputContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 5px;
 }
 
 .suggestions-container {
@@ -40,7 +29,7 @@
 }
 
 .autocomplete-container input::placeholder {
-  text-align: left;
+  text-align: center;
 }
 
 .bar input {
@@ -50,7 +39,6 @@
 
 .searchbar-input::placeholder {
   font-size: 0.64rem;
-  margin-top: 0px; 
 }
 
 .bar .searchTitle, .searchTitleCenter {
@@ -58,28 +46,21 @@
   font-size: 0.7rem;
   font-family: 'Kanit', sans-serif;
   font-weight: 700;
-  padding-top: 3px; 
-  margin-top: 0px; 
+  padding-top: 10px;
 }
-
 
 .check-in:hover {
   cursor: 'pointer';
-  /* background-color: #f0f0f0; */
-  border-radius: 15px;
-  
 }
 .check-out:hover{
   cursor: 'pointer';
-  /* background-color: #f0f0f0; */
-  border-radius: 15px;
 }
 .check-in{
-  width: 16%;
+  width: 20%;
   cursor: pointer;
 }
 .check-out{
-  width: 16%;
+  width: 20%;
   cursor: pointer;
 }
 .location{
@@ -87,9 +68,8 @@
 }
 .accommodation {
   width: 25%;
-  
+ 
 }
-
 .searchbar-input {
   background: none;
   border: none;
@@ -126,59 +106,52 @@
   margin-right: 1%;
   font-size: 10px;
   line-height: 30px;
-  border: 1px solid #0fa616;
+  border: 1px solid #0D9813;
   border-radius: 50%;
   color: #ffffff;
-  background-color: #0fa616;
+  background-color: transparent;
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
-  height: 41px;
-  width: 41px;
-  margin-top:8px;
+  transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+  transition-property: color;
+  height: 33px;
+  width: 33px;
+  margin-top: 10px;
 }
 .searchbar-button:hover {
-  background-color: #0a770f;
-  border-color: #0a770f;
-  transition-duration: 0.3s
+  background-color: #0D9813;
+  border-color: #0D9813;
+  transition-duration: 0.4s;
 }
 .searchbar-button svg {
-  color: rgb(255, 255, 255);
-  margin-top: 10px;
+  color: black; /* Zwarte kleur voor FaSearch-icoon */
 }
 .searchbar-button:hover svg {
   animation: bounce 0.7s ease 1;
 }
 @keyframes bounce {
-  0%, 100% {
+  0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
-    animation-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
   }
-  20% {
+  40% {
     transform: translateY(-5px);
-    animation-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
   }
-  50%, 80% {
-    transform: translateY(0);
-    animation-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
-  }
-  20% {
+  60% {
     transform: translateY(-3px);
-    animation-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
   }
 }
 .searchBar {
   background: none;
   border: none;
-  padding-top: 1rem;
-  padding-bottom: 0.4rem; 
+  padding: 0.6rem 0 0 0;
   text-align: left;
-  margin-bottom: 10px;
-  width: 85%;
+  width: 80%;
 }
 .searchBar:focus {
   outline: none;
 }
 .searchBar::placeholder {
   font-size: 0.64rem;
+  text-align: left;
 }
 
 @media (max-width: 1000px) {
