--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -1,3 +1,48 @@
+.StripeModal {
+  z-index: 2;
+  left: 0;
+  width: 100%;
+  height: 2vw;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #0D9813;
+  color: white;
+  padding: 20px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  text-align: center;
+  border-radius: 0 0 4px 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease-out;
+  transform: translateY(-100%);
+  opacity: 0;
+}
+
+.StripeModal-open {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.StripeModal h2 {
+  font-size: 1.4em;
+  margin: 0 15px;
+  flex-grow: 1;
+}
+
+.StripeModal button {
+  background-color: #0D9813;
+  border: none;
+  border-radius: 40px;
+  font-size: 1.5em;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.StripeModal button:hover {
+  background-color: #3da942;
+}
+
 .container {
   width: 90%;
   margin: auto;
