--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -10,7 +10,7 @@
   padding: 20px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
   text-align: center;
-  border-radius: 0 0 4px 4px;
+  border-radius: 6px;
   display: flex;
   justify-content: center;
   align-items: center;
