--- a/web/src/components/hostdashboard/Accommodations.css
+++ b/web/src/components/hostdashboard/Accommodations.css
@@ -130,4 +130,5 @@
   background-color: #FFBABA; /* Lichtrode achtergrondkleur */
   border: 1px solid #D8000C; /* Rode rand rondom de tekst */
   border-radius: 5px; /* Maakt de hoeken van de rand rond */
+  /*  */
 }
